# portfolio

./: .gitignore  Cargo.toml  Procfile  Rocket.toml  RustConfig  index.html  index.js  index.scss  rust-toolchain.toml
client/: .gitignore  Cargo.toml  Trunk.toml  index.html
client/src/: bindings.rs  lib.rs  main.rs
client/src/component/: circle_anim.rs  mod.rs  navbar.rs
client/src/data/: project.rs
client/src/page/: home.rs  mod.rs  project.rs
client/style/: index.scss
htmls/: 404.html.tera  base.html.tera  head.html.tera  home.html  home.html.tera  navbar.html  proj.html  sidebar.html  sidebar.html.tera
server/: Cargo.toml
server/src/: main.rs
server/src/api/: project.rs
src/: arguments.rs  bindings.rs  database.rs  html.rs  http_error.rs  image.rs  lang.rs  lib.rs  link.rs  main.rs  page.rs  project.rs
src/component/: circle_anim.rs  mod.rs  navbar.rs
src/data/: lang.rs  project.rs
src/page/: error.rs  home.rs  mod.rs  project.rs
static/css/: back.css  font.css  font.css.map  font.scss  halfmoon-variables.min.css.f  main.css  main.css.map  main.scss
static/js/: animation.js  halfmoon-module.js.f  lang.js
