[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
yew-router = "0.16.0"
serde = "1.0.130"
wasm-bindgen = "0.2.79"

[dependencies.getrandom]
version = "0.2.5"
features = ["js"]

[dependencies.serde_json]
version = "1.0.79"
default-features = false
features = ["alloc"]