[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.79"
bson = "2.1.0"
uuid = { version = "0.8", features = ["serde", "v4", "wasm-bindgen"] }

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[workspace]
members = ["server", "client"]
default-members = ["server"]