[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
reqwasm = "0.5.0"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
wasm-bindgen-futures = "0.4.29"
log = "0.4.14"
bson = "2.1.0"

[dependencies.getrandom]
version = "0.2.5"
features = ["js"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies.portfolio]
path = ".."